--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,7 @@ on:
 
 permissions:
   id-token: write # Needed for provenance
+  packages: write # Needed to publish package to GitHub package registry
 
 jobs:
   publish:
