--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ on:
 permissions:
   id-token: write # Needed for provenance
   packages: write # Needed to publish package to GitHub package registry
+  contents: read # Needed for publishing to JSR
 
 jobs:
   publish:
