--- a/package.json
+++ b/package.json
@@ -46,37 +46,18 @@
     "lint": "biome check",
     "lint:fix": "biome check --write"
   },
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
-  "imports": {
-    "@sumup/sdk": ".",
-    "@sumup/sdk/*": "./src/*"
-  },
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./*": {
-      "types": [
-        "./dist/*.d.ts",
-        "./dist/*/index.d.ts"
-      ],
-      "require": [
-        "./dist/*.cjs",
-        "./dist/*/index.cjs"
-      ],
-      "default": [
-        "./dist/*.js",
-        "./dist/*/index.js"
-      ]
-    }
+    "types": "./dist/index.d.ts",
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.js"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@rslib/core": "^0.6.0",
     "rsbuild-plugin-dts": "^0.6.0",
+    "rsbuild-plugin-publint": "^0.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
