--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,11 @@
 version: 2
+
 updates:
   - package-ecosystem: "npm"
     directory: "/"
     open-pull-requests-limit: 5
     schedule:
-      interval: "daily"
+      interval: "weekly"
     groups:
       rslib:
         patterns:
@@ -13,5 +14,5 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     open-pull-requests-limit: 5
