--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rsbuild-plugin-dts": "^0.6.0",
     "rsbuild-plugin-publint": "^0.3.0",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.3",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
   }
