--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.4/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -9,7 +9,7 @@
     "enabled": true,
     "formatWithErrors": false,
     "indentStyle": "space",
-    "ignore": ["dist/**", "openapi.json"]
+    "includes": ["**", "!openapi.json"]
   },
   "linter": {
     "enabled": true,
@@ -19,7 +19,7 @@
         "noUnusedTemplateLiteral": "off"
       }
     },
-    "ignore": ["dist/**", ".rslib"]
+    "includes": ["**", "!**/.rslib"]
   },
   "javascript": {
     "formatter": {
@@ -29,7 +29,7 @@
   },
   "overrides": [
     {
-      "include": ["package.json", "jsr.json"],
+      "includes": ["**/package.json", "**/jsr.json"],
       "formatter": {
         "lineWidth": 1,
         "indentStyle": "space"
