fix: missing response types
Use latest version of codegenerator to fix missing
response types. Separate examples.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,9 @@ version: 2
 
 updates:
   - package-ecosystem: "npm"
-    directory: "/"
+    directories:
+      - './'
+      - './examples/**/*'
     open-pull-requests-limit: 5
     schedule:
       interval: "weekly"
