chore(tooling): update dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,9 +2,7 @@ version: 2
 
 updates:
   - package-ecosystem: "npm"
-    directories:
-      - './'
-      - './examples/**/*'
+    directory: '/'
     open-pull-requests-limit: 5
     schedule:
       interval: "weekly"
@@ -18,3 +16,13 @@ updates:
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 5
+  - package-ecosystem: "npm"
+    directories:
+      - '/examples/**/*'
+    open-pull-requests-limit: 5
+    schedule:
+      interval: "weekly"
+    groups:
+      all:
+        patterns:
+          - "*"
