--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,7 @@
 version: 2
-
 updates:
   - package-ecosystem: "npm"
-    directory: '/'
+    directory: '/sdk'
     open-pull-requests-limit: 5
     schedule:
       interval: "weekly"
