--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,10 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: ./sdk
+
 permissions:
   contents: write
   pull-requests: write
@@ -24,8 +28,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: 22
+          node-version-file: ./sdk/package.json
           cache: npm
+          cache-dependency-path: ./sdk/package-lock.json
 
       - name: Setup Biome CLI
         uses: biomejs/setup-biome@454fa0d884737805f48d7dc236c1761a0ac3cc13 # v2.6.0
@@ -49,8 +54,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: 22
+          node-version-file: ./sdk/package.json
           cache: npm
+          cache-dependency-path: ./sdk/package-lock.json
 
       - name: Install dependencies
         run: npm ci
