--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -20,8 +20,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: 22
+          node-version-file: ./sdk/package.json
           cache: npm
+          cache-dependency-path: ./sdk/package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -29,7 +30,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - run: npx typedoc
+      - run: npx typedoc --basePath sdk/
 
       - uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa # v3.0.1
         with:
