--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+defaults:
+  run:
+    working-directory: ./sdk
+
 concurrency:
   group: generate-${{ github.ref }}
   cancel-in-progress: true
@@ -24,7 +28,9 @@ jobs:
 
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: 20
+          node-version-file: ./sdk/package.json
+          cache: npm
+          cache-dependency-path: ./sdk/package-lock.json
 
       - name: Install dependencies
         run: npm ci
