feat(codegen): move codegen in here
Moves code generation tooling into the `sumup-ts` repo as it's tightly
coupled anyway and this setup makes it easier to make adjustments
when needed.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,16 @@ updates:
         patterns:
           - "@rslib/*"
           - "rsbuild-*"
+  - package-ecosystem: "npm"
+    directory: '/codegen'
+    open-pull-requests-limit: 5
+    schedule:
+      interval: "weekly"
+    groups:
+      rslib:
+        patterns:
+          - "@rslib/*"
+          - "rsbuild-*"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
