--- a/.github/workflows/codegen.yaml
+++ b/.github/workflows/codegen.yaml
@@ -2,12 +2,9 @@ name: Codegen CI
 
 on:
   push:
-    branches:
-      - main
-      - next
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 defaults:
   run:
