--- a/sdk/package.json
+++ b/sdk/package.json
@@ -50,9 +50,14 @@
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
   "exports": {
-    "types": "./dist/index.d.ts",
-    "require": "./dist/index.cjs",
-    "default": "./dist/index.js"
+    "import": {
+      "tpes": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    }
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
