--- a/sdk/package.json
+++ b/sdk/package.json
@@ -51,7 +51,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     "import": {
-      "tpes": "./dist/index.d.ts",
+      "types": "./dist/index.d.ts",
       "default": "./dist/index.js"
     },
     "require": {
