feat: report runtime properties
Propagate more information about the SDK's runtime including the API
version, package version, etc. to get more observability into the SDKs
usage.
Also removes the generation of the client/client.go file as it
doesn't depend on the OpenAPI specs and can be maintained manually.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,13 +32,16 @@ updates:
       default-days: 7
   - package-ecosystem: "npm"
     directories:
-      - '/examples/**/*'
+      - '/examples/card-reader-checkout'
+      - '/examples/checkout'
+      - '/examples/oauth2'
+      - '/examples/payment-widget'
     open-pull-requests-limit: 5
     groups:
-      all:
+      examples:
         patterns:
           - "*"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     cooldown:
       default-days: 7
