--- a/sdk/package.json
+++ b/sdk/package.json
@@ -23,9 +23,8 @@
   "files": [
     "dist",
     "README.md",
-    "CODE_OF_CONDUCT.md",
-    "CONTRIBUTING.md",
-    "LICENSE.md"
+    "CHANGELOG.md",
+    "LICENSE"
   ],
   "engines": {
     "node": ">=18"
